--- a/index.html
+++ b/index.html
@@ -5,25 +5,8 @@
 </head>
 <body>
 <p>
-送给你小心心<br>
-送你花一朵<br>
-你在我生命中<br>
-太多的感动<br>
-你是我的天使<br>
-一路指引我<br>
-无论岁月变幻<br>
-爱你唱成歌<br>
-听我说谢谢你<br>
-因为有你 温暖了四季<br>
-谢谢你 感谢有你<br>
-世界更美丽<br>
-我要谢谢你 因为有你<br>
-爱常在心底<br>
-谢谢你 感谢有你<br>
-把幸福传递<br>
-</p>
-<p>
-  梦(ゆめ)ならばどれほどよかったでしょう<br>
+  <p align="center">Lemon(米津玄师)</p>
+梦(ゆめ)ならばどれほどよかったでしょう<br>
 未(いま)だにあなたのことを梦(ゆめ)にみる<br>
 忘(わす)れた物(もの)を取(と)りに帰(かえ)るように<br>
 古(ふる)びた思(おも)い出(で)の埃(ほこり)を払(はら)う<br>
