--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 时至今日 你仍是我的光芒<br>
 <audio
         controls
-        src="/video/Lemon.m4a">
+        src="/media/Lemon.m4a">
             Your browser does not support the
             <code>audio</code> element.
     </audio>
