--- a/404/index.html
+++ b/404/index.html
@@ -1,11 +1,11 @@
 <!DCOTYPE HTML lang="zh-cn">
 <html>
 <head>
-<title>404!</title>
+  <title>404 Not Found</title>
 </head>
 <body>
-<p>
-  抱歉，网页丢失了!检查一下网址吧o((>ω< ))o!
-</p>
+  <center>
+    <h1>404 Not Found</h1>
+  </center>
 </body>
 </html>
