--- a/index.html
+++ b/index.html
@@ -90,13 +90,8 @@
 在雨过天晴前都无法归去<br>
 如同被切开的半个柠檬一般<br>
 时至今日 你仍是我的光芒<br>
-<audio
-        controls
-        src="/media/Lemon.m4a">
-            Your browser does not support the
-            <code>audio</code> element.
-    </audio>
-  </p>
-  <iframe src="//player.bilibili.com/player.html?aid=386561835&bvid=BV1Bd4y1U7jP&cid=791778153&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<audio src="/media/Lemon.m4a">
+</audio>
+</p>
 </body>
 </html>
