--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 在雨过天晴前都无法归去<br>
 如同被切开的半个柠檬一般<br>
 时至今日 你仍是我的光芒<br>
-<audio src="/media/Lemon.m4a">
+<audio controls autoplay src="/media/Lemon.m4a">
 </audio>
 </p>
 </body>
