--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 在雨过天晴前都无法归去<br>
 如同被切开的半个柠檬一般<br>
 时至今日 你仍是我的光芒<br>
-<audio controls autoplay src="/media/Lemon.m4a">
-  你的浏览器不支持播放音频，可以在<a href="/media/Lemon.m4a">这里</a>下载后欣赏</a>
+<audio controls autoplay="autoplay" src="/media/Lemon.m4a">
+  你的浏览器不支持播放音频，可以在<a href="/media/Lemon.m4a" download="Lemon.m4a">这里</a>下载后欣赏</a>
 </audio>
 </p>
 </body>
