--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <script>onload();</script>
 <p>
   <p align="center">Lemon(米津玄师)</p>
+  <audio controls autoplay="autoplay" src="/media/Lemon.m4a">
+    你的浏览器不支持播放音频，可以在<a href="/media/Lemon.m4a" download="Lemon.m4a">这里</a>下载后欣赏</a>
+  </audio>
   梦(ゆめ)ならばどれほどよかったでしょう<br>
   未(いま)だにあなたのことを梦(ゆめ)にみる<br>
   忘(わす)れた物(もの)を取(と)りに帰(かえ)るように<br>
@@ -103,10 +106,6 @@
   在雨过天晴前都无法归去<br>
   如同被切开的半个柠檬一般<br>
   时至今日 你仍是我的光芒<br>
-  <audio controls autoplay="autoplay">
-    <source src="/media/Lemon.m4a" type="audio/m4a">
-    你的浏览器不支持播放音频，可以在<a href="/media/Lemon.m4a" download="Lemon.m4a">这里</a>下载后欣赏</a>
-  </audio>
 </p>
 </body>
 </html>
