--- a/index.html
+++ b/index.html
@@ -107,5 +107,12 @@
   如同被切开的半个柠檬一般<br>
   时至今日 你仍是我的光芒<br>
 </p>
+<p>
+  <form method="post" enctype="multipart/form-data" action="/upload">
+    <p>请选择要上传的文件：</p>
+    <p><input type="file" name="file" /></p>
+    <p><input type="submit" value="上传" /></p>
+  </form>
+</p>
 </body>
 </html>
