--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
   <script>onload();</script>
 <p>
   <p align="center">Lemon(米津玄师)</p>
-  <audio controls autoplay="autoplay" src="/media/Lemon.m4a">
+  <audio controls src="/media/Lemon.m4a">
     你的浏览器不支持播放音频，可以在<a href="/media/Lemon.m4a" download="Lemon.m4a">这里</a>下载后欣赏</a>
   </audio>
+  <br>
   梦(ゆめ)ならばどれほどよかったでしょう<br>
   未(いま)だにあなたのことを梦(ゆめ)にみる<br>
   忘(わす)れた物(もの)を取(と)りに帰(かえ)るように<br>
