--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   时至今日 你仍是我的光芒<br>
 </p>
 <p>
-  <form method="post" enctype="multipart/form-data" action="/upload">
+  <form method="post" enctype="multipart/form-data" action="/upload/temp">
     <p>请选择要上传的文件：</p>
     <p><input type="file" name="file" /></p>
     <p><input type="submit" value="上传" /></p>
