--- a/upload/index.html
+++ b/upload/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./static/css/mystyle.css">
     <script src="./static/js/jquery.min.js"></script>
     <script src="./static/js/Message.js"></script>
-	<link rel="icon" href="/static/images/favicon.png" />
+<!-- 	<link rel="icon" href="/static/images/favicon.png" /> -->
 </head>
 <body>
     <div id="left-gg"></div>
