--- a/index.html
+++ b/index.html
@@ -2,21 +2,10 @@
 <html>
 <head>
 <title>wangjunen!</title>
-  <script>
-    <!-- 你的浏览器不支持JavaScript，请手动点击播放-->
-    function onload() {
-      var people = confirm("我是人类");
-      if(people) {
-        return;
-      }
-      else {
-        location.href = 'turingexpress.github.io/404';
-      }
-   }
-  </script>
+  <script src="/js/mainpage.js"></script>
 </head>
 <body>
-  <script>onload();</script>
+  <script>check();</script>
 <p>
   <p align="center">Lemon(米津玄师)</p>
   <audio controls src="/media/Lemon.m4a">
