--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>wangjunen!</title>
   <script src="/js/mainpage.js"></script>
+  <style src="/css/mainpage.css"></style>
 </head>
 <body>
   <script>check();</script>
