--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style src="/css/mainpage.css"></style>
 </head>
 <body>
-  <script>check();</script>
+<!--   <script>check();</script> -->
   <p>
     <p align="center">Lemon(米津玄师)</p>
     <audio controls src="/media/Lemon.m4a">
