--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 <title>wangjunen!</title>
   <script src="/js/mainpage.js"></script>
-  <style src="/css/mainpage.css"></style>
 </head>
 <body>
-<!--   <script>check();</script> -->
+  <script>check();</script>
   <p>
     <p align="center">Lemon(米津玄师)</p>
     <audio controls src="/media/Lemon.m4a">
